feat: add text to speech + fixes

--- a/src/WebClient/index.html
+++ b/src/WebClient/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/clown.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mocking Mirror</title>
+
+    <title>Mocking Mirror | Telling you how you really look</title>
+    <meta name="description" content="Mocking Mirror is the only mirror that tells you how you really look: like a clown." />
+    <meta name="keywords" content="mocking mirror, clown, mirror, mocking, funny, ai" />
+    <link rel="icon" type="image/svg+xml" href="/images/clown.svg" />
+
+    <link rel="author" href="https://victorfrye.com/" />
+    <meta name="author" content="Victor Frye" />
+
+    <meta property="og:title" content="Mocking Mirror">
+    <meta property="og:description" content="Mocking Mirror is the only mirror that tells you how you really look: like a clown.">
+    <meta property="og:site_name" content="Mocking Mirror">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <div id="root"></div>
